fix mapping